feat: 完善薪酬支付与权限上线准备
补充薪酬支付失败补偿、结算路由、权限资源治理、认证重定向和上线冒烟检查。

同步更新后端接口、前端调用、SQL 迁移、测试覆盖和软著申请材料。